--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/Gtimed61/SQL-Employee-Tracker#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "express": "^4.18.2",
+    "inquirer": "^8.2.4",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
